--- a/GGDemo/src/app/home-component/home-component.component.html
+++ b/GGDemo/src/app/home-component/home-component.component.html
@@ -1,4 +1,5 @@
 <div id="homeContainer">
+  <app-titre-bandeau></app-titre-bandeau>
   <div class="pageTitle">Imaginons un évènement mondial :</div>
   <div class="pageContent">
     <article>
@@ -9,14 +10,89 @@
         >https://belletre.ddns.net:3003/#/map/TISS6</a
       >. Bonne découverte!
     </article>
-    <img src="../../assets/QRCode.png" alt="QRCode" />
+    <img
+      src="../../assets/QRCode.png"
+      alt="QRCode"
+      style="margin-bottom: 20px"
+    />
   </div>
-  <div class="pageTitle">
+  <div class="GGbandeau">
     que peut faire&nbsp;
     <p class="GG">GentleGuest</p>
     &nbsp;pour vous ?
   </div>
   <div class="pageContent">
     <div id="metierTitle">Choisissez votre coeur de métier</div>
+    <div id="sucetteContainer">
+      <a routerLink="/hotel"
+        ><img src="../../assets/sucette/Sucette_Hotel.png" alt="Sucette_Hotel"
+      /></a>
+      <a routerLink="/restaurant"
+        ><img
+          src="../../assets/sucette/Sucette_Restaurant.png"
+          alt="Sucette_Restaurant"
+      /></a>
+      <a routerLink="/cafe-bar"
+        ><img
+          src="../../assets/sucette/Sucette Café-Bar.png"
+          alt="Sucette_Café-Bar"
+      /></a>
+      <a routerLink="/camping"
+        ><img
+          src="../../assets/sucette/Sucette_Camping.png"
+          alt="Sucette_Camping"
+      /></a>
+      <a routerLink="/magasin"
+        ><img
+          src="../../assets/sucette/Sucette_Magasins.png"
+          alt="Sucette_Camping"
+      /></a>
+      <a routerLink="/artisan"
+        ><img
+          src="../../assets/sucette/Sucette_Artisan.png"
+          alt="Sucette_Artisan"
+      /></a>
+      <a routerLink="/producteur-eleveur"
+        ><img
+          src="../../assets/sucette/Sucette_Producteur-Eleveur.png"
+          alt="Sucette_Producteur-Eleveur"
+      /></a>
+      <a routerLink="/office-de-tourisme"
+        ><img
+          src="../../assets/sucette/Sucette_Office_de_tourisme.png"
+          alt="Sucette_Office_de_tourisme"
+      /></a>
+      <a routerLink="/agence-de-voyages"
+        ><img
+          src="../../assets/sucette/Sucette Agence de voyages.png"
+          alt="Sucette_Agence_de_voyages"
+      /></a>
+      <a routerLink="/receptif"
+        ><img
+          src="../../assets/sucette/Sucette_Réceptif.png"
+          alt="Sucette_Réceptif"
+      /></a>
+      <a routerLink="/mairie"
+        ><img
+          src="../../assets/sucette/Sucette_Mairie.png"
+          alt="Sucette_Mairie"
+      /></a>
+      <a routerLink="/media-presse"
+        ><img
+          src="../../assets/sucette/Sucette_Média-Presse.png"
+          alt="Sucette_Média-Presse"
+      /></a>
+      <a routerLink="/club-sportif"
+        ><img
+          src="../../assets/sucette/Sucette_Club_sportif.png"
+          alt="Sucette_Club_sportif"
+      /></a>
+      <a routerLink="/transport-de-personnes"
+        ><img
+          src="../../assets/sucette/Sucette_Transport_de_personnes.png"
+          alt="Sucette_Transport_de_personnes"
+      /></a>
+    </div>
   </div>
+  <app-contact-us-bande></app-contact-us-bande>
 </div>
