--- a/GGDemo/src/app/nav-component/nav-component.component.html
+++ b/GGDemo/src/app/nav-component/nav-component.component.html
@@ -10,6 +10,7 @@
     <a routerLink="/accueil" routerLinkActive="active">Accueil</a>
     <a routerLink="/hotel" routerLinkActive="active">Hôtel</a>
     <a routerLink="/restaurant" routerLinkActive="active">Restaurant</a>
+    <a routerLink="/cafe-bar" routerLinkActive="active">Café-bar</a>
     <a routerLink="/camping" routerLinkActive="active">Camping</a>
     <a routerLink="/magasin" routerLinkActive="active">Magasin</a>
     <a routerLink="/artisan" routerLinkActive="active">Artisan</a>
@@ -19,8 +20,11 @@
     <a routerLink="/office-de-tourisme" routerLinkActive="active"
       >Office de tourisme</a
     >
+    <a routerLink="/agence-de-voyages" routerLinkActive="active"
+      >Agence de voyages</a
+    >
     <a routerLink="/receptif" routerLinkActive="active">Réceptif</a>
-    <a routerLink="/mairi" routerLinkActive="active">Mairi</a>
+    <a routerLink="/mairie" routerLinkActive="active">Mairie</a>
     <a routerLink="/media-presse" routerLinkActive="active">Média-Presse</a>
     <a routerLink="/club-sportif" routerLinkActive="active">Club sportif</a>
     <a routerLink="/transport-de-personnes" routerLinkActive="active"
